vis files i don't want

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,5 +2,12 @@ cmake_minimum_required( VERSION 3.4 )
 project( mytest LANGUAGES CXX )
 set( CMAKE_VERBOSE_MAKEFILE ON )
 set( CMAKE_CXX_STANDARD 14 )
-set( SRCS vis_00_base.cpp )
+set( SRCS /home/martin/stage/copernicus-radar/source/copernicus_00_main.cpp
+/home/martin/stage/copernicus-radar/source/copernicus_01_mmap.cpp
+/home/martin/stage/copernicus-radar/source/copernicus_02_collect_packet_headers.cpp
+/home/martin/stage/copernicus-radar/source/copernicus_03_process_packet_headers.cpp
+/home/martin/stage/copernicus-radar/source/copernicus_04_decode_packet.cpp
+/home/martin/stage/copernicus-radar/source/copernicus_05_decode_type_ab_packet.cpp
+/home/martin/stage/copernicus-radar/source/copernicus_06_decode_sub_commutated_data.cpp
+/home/martin/stage/copernicus-radar/source/copernicus_07_decode_type_c_packet.cpp )
 add_executable( mytest ${SRCS} )
