python says hello
1607452037070760699 140397553050816 /home/martin/stage/copernicus-radar/source/copernicus_00_main.cpp:93 main map_ele  cal_type='1::int' number_of_cal='140::int'
1607452037070763631 140397553050816 /home/martin/stage/copernicus-radar/source/copernicus_00_main.cpp:93 main map_ele  cal_type='7::int' number_of_cal='116::int'
1607452037070766503 140397553050816 /home/martin/stage/copernicus-radar/source/copernicus_00_main.cpp:93 main map_ele  cal_type='0::int' number_of_cal='124::int'
hello
1607452037487003501 140397553050816 /home/martin/stage/c

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required( VERSION 3.4 )
 project( mytest LANGUAGES CXX )
 set( CMAKE_VERBOSE_MAKEFILE ON )
 set( CMAKE_CXX_STANDARD 14 )
+find_package( Python COMPONENTS Interpreter Development REQUIRED )
+find_package( pybind11 REQUIRED )
 set( SRCS /home/martin/stage/copernicus-radar/source/copernicus_00_main.cpp
 /home/martin/stage/copernicus-radar/source/copernicus_01_mmap.cpp
 /home/martin/stage/copernicus-radar/source/copernicus_02_collect_packet_headers.cpp
@@ -10,5 +12,7 @@ set( SRCS /home/martin/stage/copernicus-radar/source/copernicus_00_main.cpp
 /home/martin/stage/copernicus-radar/source/copernicus_05_decode_type_ab_packet.cpp
 /home/martin/stage/copernicus-radar/source/copernicus_06_decode_sub_commutated_data.cpp
 /home/martin/stage/copernicus-radar/source/copernicus_07_decode_type_c_packet.cpp
-/home/martin/stage/copernicus-radar/source/copernicus_08_demangle.cpp )
+/home/martin/stage/copernicus-radar/source/copernicus_08_demangle.cpp
+/home/martin/stage/copernicus-radar/source/copernicus_09_python.cpp )
 add_executable( mytest ${SRCS} )
+target_link_libraries( mytest PRIVATE pybind11::embed gmp )
